# custos

./: 02_Relationship_Specification_Inference_Clarification_Amendment_v1.0.md  06_Foundational_Cross_Document_Reaudit_Report_v1.0.md  CUSTOS.md  Controlled Vocabulary Specification v1.0  Documentary_Finding_000001_The_Principle_of_Documentary_Horizon_v1.0.txt  Documentary_Ontology_v1.1.md  Documentary_Ontology_v1.1_CORRECTED.txt  HISTORY.md  Identifier_Specification_v1.md  README.md  README_CORRECTED_PACKAGE.txt  RELATIONSHIP SPECIFICATION Version 1.0.md  custos.yaml  pyproject.toml
inquiry_engine/: DEVELOPMENT_BASELINE.md  IMPLEMENTATION_RECORD_v0.1.txt  README.md  bootstrap.py  pyproject.toml
inquiry_engine/Hermeneutic_Object_LC001_Operationalization_v0.1/Hermeneutic_Object_LC001_Operationalization_v0.1/: SOURCE_FIXITY.json
inquiry_engine/cognitive_memory/: HOC-000000001.taxonomy.json
inquiry_engine/literary_concealment/: INTEGRATION_AUDIT.md  INTEGRATION_MANIFEST.json  README.md  TECHNICAL_CERTIFICATION_RECORD.md
inquiry_engine/src/custos_engine/: __init__.py  cli.py
inquiry_engine/tests/cognition/: test_hermeneutic_gate.py
inquiry_engine/tests/federation/: test_adapter.py
inquiry_engine/tests/fixtures/: cognitive_memory_manifest.template.json  inquiry.json  taxonomy.json
inquiry_engine/tests/integration/: test_always_open_governance_unit.py  test_candidate_cognitive_component_register_admission.py  test_constitutional_amendment_governance.py  test_document_000008_admission.py  test_document_000009_admission.py  test_document_000010_admission.py  (+16 more)
(+630 files in other folders)
