[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custos"
version = "1.0.0"
description = "Streamlined documentary reading system for Straussian inquiry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0,<7"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
custos = "custos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
