[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custos-inquiry-engine"
version = "0.1.0"
description = "Local, deterministic scaffold for the Strauss Inquiry Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.20,<6"]
dev = ["pytest>=8.2,<9"]

[project.scripts]
custos-inquiry = "custos_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custos_engine = [
  "schemas/*.json",
  "literary_concealment/*/schemas/*.json",
  "literary_concealment/*/techniques/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
